--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<description>Bootcamp pagseguro produtos</description>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>14</java.version>
 		<kotlin.version>1.3.72</kotlin.version>
 		<org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
 	</properties>
@@ -63,6 +63,11 @@
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
 			<version>${org.mapstruct.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>2.3.3.RELEASE</version>
 		</dependency>
 	</dependencies>
 
