--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<description>Bootcamp pagseguro produtos</description>
 
 	<properties>
-		<java.version>14</java.version>
+		<java.version>11</java.version>
 		<kotlin.version>1.3.72</kotlin.version>
 		<org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
 	</properties>
@@ -32,10 +32,12 @@
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-reflect</artifactId>
+			<version>${kotlin.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-stdlib-jdk8</artifactId>
+			<version>${kotlin.version}</version>
 		</dependency>
 
 		<dependency>
@@ -82,6 +84,7 @@
 			<plugin>
 				<groupId>org.jetbrains.kotlin</groupId>
 				<artifactId>kotlin-maven-plugin</artifactId>
+				<version>1.3.72</version>
 				<configuration>
 					<args>
 						<arg>-Xjsr305=strict</arg>
@@ -94,7 +97,7 @@
 					<dependency>
 						<groupId>org.jetbrains.kotlin</groupId>
 						<artifactId>kotlin-maven-allopen</artifactId>
-						<version>${kotlin.version}</version>
+						<version>1.3.72</version>
 					</dependency>
 				</dependencies>
 			</plugin>
@@ -103,8 +106,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>1.8</source> <!-- depending on your project -->
-					<target>1.8</target> <!-- depending on your project -->
+					<source>11</source> <!-- depending on your project -->
+					<target>11</target> <!-- depending on your project -->
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.mapstruct</groupId>
