--- a/pom.xml
+++ b/pom.xml
@@ -101,23 +101,49 @@
 					</dependency>
 				</dependencies>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
-				<configuration>
-					<source>11</source> <!-- depending on your project -->
-					<target>11</target> <!-- depending on your project -->
-					<annotationProcessorPaths>
-						<path>
-							<groupId>org.mapstruct</groupId>
-							<artifactId>mapstruct-processor</artifactId>
-							<version>${org.mapstruct.version}</version>
-						</path>
-						<!-- other annotation processors -->
-					</annotationProcessorPaths>
-				</configuration>
-			</plugin>
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-compiler-plugin</artifactId>-->
+<!--				<version>3.8.1</version>-->
+<!--				<configuration>-->
+<!--					<source>11</source>-->
+<!--					<target>11</target>-->
+<!--					<annotationProcessorPaths>-->
+<!--						<path>-->
+<!--							<groupId>org.mapstruct</groupId>-->
+<!--							<artifactId>mapstruct-processor</artifactId>-->
+<!--							<version>${org.mapstruct.version}</version>-->
+<!--						</path>-->
+<!--						&lt;!&ndash; other annotation processors &ndash;&gt;-->
+<!--					</annotationProcessorPaths>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
+<!--			<plugin>-->
+<!--				<groupId>org.jetbrains.kotlin</groupId>-->
+<!--				<artifactId>kotlin-maven-plugin</artifactId>-->
+<!--				<version>${kotlin.version}</version>-->
+<!--				<executions>-->
+<!--					<execution>-->
+<!--						<id>kapt</id>-->
+<!--						<goals>-->
+<!--							<goal>kapt</goal>-->
+<!--						</goals>-->
+<!--						<configuration>-->
+<!--							<sourceDirs>-->
+<!--								<sourceDir>src/main/kotlin</sourceDir>-->
+<!--								<sourceDir>src/main/java</sourceDir>-->
+<!--							</sourceDirs>-->
+<!--							<annotationProcessorPaths>-->
+<!--								<annotationProcessorPath>-->
+<!--									<groupId>org.mapstruct</groupId>-->
+<!--									<artifactId>mapstruct-processor</artifactId>-->
+<!--									<version>${org.mapstruct.version}</version>-->
+<!--								</annotationProcessorPath>-->
+<!--							</annotationProcessorPaths>-->
+<!--						</configuration>-->
+<!--					</execution>-->
+<!--				</executions>-->
+<!--			</plugin>-->
 		</plugins>
 	</build>
 
